# bnirc

./: AUTHORS  ChangeLog  Dockerfile  FAQ  Makefile.am  Makefile.in  PACKAGING  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  bnBot  bnirc.1  bnirc.spec.in  build_container.sh  common.tmplt  configure  configure.ac  default.tmplt  libtool  logo  nocurses.tmplt  sample.bnirc
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  bnirc.default.ex  bnirc.doc-base.EX  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
gentoo/: bnirc.ebuild  metadata.xml
include/: Makefile.am  Makefile.in  channel.h  config.h.in  irc.h  ircserver.h  list.h  plugin.h  user.h
plugins/: Makefile.am  Makefile.in
plugins/ctcp/: Makefile.am  Makefile.in  ctcp.c
plugins/dcc/: Makefile.am  Makefile.in  dcc.c
plugins/debug/: Makefile.am  Makefile.in  debug.c
plugins/hello/: Makefile.am  Makefile.in  hello.c
plugins/io_ncurses/: Makefile.am  Makefile.in  io_ncurses.c
plugins/irc_input/: Makefile.am  Makefile.in  irc_input.c
plugins/python/: Makefile.am  Makefile.in  python.c  setup.py
plugins/rserver/: Makefile.am  Makefile.in  rserver.c
plugins/script/: Makefile.am  Makefile.in  script.c
plugins/server_strings/: Makefile.am  Makefile.in  server_strings.c
scripts/: Makefile.am  Makefile.in  __main__.py  dcc.py  joo_utils.py  mkinitfile.py  pastebin.py  persistant.py  rot13.py  startup.sl  toc.py
src/: Makefile.am  Makefile.in  away.c  bnirc.c  channel.c  connect.c  faq.c  history.c  io.c  irc.c  loop_hooks.c  options.c  parse_input_string.c  parse_server_string.c  plugin.c  poll.c  readme.c  regex.c  sigalrm.c  support.c  tab_complete.c  user.c
